--- a/templates/index.html
+++ b/templates/index.html
@@ -152,7 +152,7 @@
                 </div>
                 
                 <div class="col-sm-2" style="background-color:transparent;">
-                    <button class="button" onclick="window.location.href='result.html';">Calculate</button>
+                    <button class="button">Calculate</button>
                 </div>
 
                 <div class="col-sm-5" style="background-color:transparent;">
