--- a/templates/index.html
+++ b/templates/index.html
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <!-- If the button is within the form, it would work according to the python file
-                Test it when the button is outside the form tag, (The button does nothing)
+                Test it when the button is outside the form tag, (The button does nothing) (Didnt specify onclick = ...)
                 -->
                 <div class="col-sm-2" style="background-color:transparent;">
                     <button class="button">Calculate</button>
